--- a/app/server/package.json
+++ b/app/server/package.json
@@ -8,10 +8,13 @@
         "start": "node index.js"
     },
     "dependencies": {
-        "axios": "^1.6.2",
+        "axios": "^1.13.2",
         "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
         "express": "^4.18.2",
         "fs-extra": "^11.2.0",
-        "multer": "^2.0.2"
+        "googleapis": "^169.0.0",
+        "multer": "^2.0.2",
+        "zod": "^4.2.1"
     }
 }
