--- a/app/server/package.json
+++ b/app/server/package.json
@@ -15,6 +15,7 @@
         "fs-extra": "^11.2.0",
         "googleapis": "^169.0.0",
         "multer": "^2.0.2",
+        "uuid": "^13.0.0",
         "zod": "^4.2.1"
     }
 }
